fix(button): align button in paragraph

--- a/assets/styles/layouts/container.styl
+++ b/assets/styles/layouts/container.styl
@@ -20,10 +20,11 @@
     padding 50px 0
 
   &_title
+    font-weight 700
     text-transform uppercase
 
   &_text
     margin 50px 0
-    width 480px
+    width 600px
     font-size 5rem
     text-align center
